--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>omnifood</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -20,13 +33,60 @@
             <li><a href="#">sign up</a></li>
           </ul>
         </nav>
-        <ul class="para">
-          <li>goodbye junk food.</li>
-          <li>hello super healthy meals.</li>
-        </ul>
-        <button class="hungry">I'm hungry</button>
-        <button class="show-me-more">Show me more</button>
+        <h1 class="hero-text">
+          goodbye junk food. <br />hello super healthy meals.
+        </h1>
+        <button class="hungry-btn btn">I'm hungry</button>
+        <button class="show-me-more-btn btn">Show me more</button>
       </header>
+    </section>
+    <!-- Feature section -->
+    <section class="feature-section">
+      <h2 class="ft-header">get food fast—not fast food</h2>
+      <div class="line"></div>
+      <p class="feature-text">
+        Hello,we're omnifood, your new premiun food delivery service. We know
+        you're always busy. <br />No time for cooking.so let us take care of
+        that,we're rellay good at it,We promise!
+      </p>
+      <div class="feature-container">
+        <div class="container-1">
+          <div><i class="fa-solid fa-infinity"></i></div>
+          <h3 class="icon-head">up to 365 days/year</h3>
+          <p class="icon-para"></p>
+          Never cook again! We really mean that. Our subscription plans include
+          up to 365 days/year coverage. You can also choose to order more
+          flexibly if that's your style.
+        </div>
+        <div class="container-2">
+          <div><i class="fa-regular fa-clock"></i></div>
+          <h3 class="icon-head">Ready in 20 minutes</h3>
+          <p class="icon-para">
+            You're only twenty minutes away from your delicious and super
+            healthy meals delivered right to your home. We work with the best
+            chefs in each town to ensure that you're 100% happy.
+          </p>
+        </div>
+        <div class="container-3">
+          <div><i class="fa-solid fa-carrot"></i></div>
+          <h3 class="icon-head">100% organic</h3>
+          <p class="icon-para">
+            All our vegetables are fresh, organic and local. Animals are raised
+            without added hormones or antibiotics. Good for your health, the
+            environment, and it also tastes better!
+          </p>
+        </div>
+        <div class="container-4">
+          <div><i class="fa-solid fa-cart-shopping"></i></div>
+
+          <h3 class="icon-head">order anything</h3>
+          <p class="icon-para">
+            We don't limit your creativity, which means you can order whatever
+            you feel like. You can also choose from our menu containing over 100
+            delicious meals. It's up to you!
+          </p>
+        </div>
+      </div>
     </section>
   </body>
 </html>
