--- a/index.html
+++ b/index.html
@@ -88,5 +88,199 @@
         </div>
       </div>
     </section>
+    <!-- MEAL SECTION -->
+    <section class="meal-section">
+      <div class="meal-img-container">
+        <ul class="first-meal">
+          <li class="meal-image"><img src="./img/1.jpg" alt="mael" /></li>
+          <li class="meal-image"><img src="./img/2.jpg" alt="meal" /></li>
+          <li class="meal-image"><img src="./img/3.jpg" alt="meal" /></li>
+          <li class="meal-image"><img src="./img/4.jpg" alt="meal" /></li>
+        </ul>
+        <ul class="last-meal">
+          <li class="meal-image"><img src="./img/5.jpg" alt="meal" /></li>
+          <li class="meal-image"><img src="./img/6.jpg" alt="meal" /></li>
+          <li class="meal-image"><img src="./img/7.jpg" alt="meal" /></li>
+          <li class="meal-image"><img src="./img/8.jpg" alt="meal" /></li>
+        </ul>
+      </div>
+    </section>
+    <!-- APPLICATION SECTION -->
+    <section class="app">
+      <div class="app-container">
+        <h2 class="app-head">how it works — simple as 1, 2, 3</h2>
+        <div class="app-line"></div>
+        <div class="app-container-2">
+          <div class="app-img-container">
+            <img src="./img/app-iPhone.png" alt="app" />
+          </div>
+          <div class="app-text-container">
+            <ul class="app-list">
+              <li class="one">1</li>
+              <li class="two">2</li>
+              <li class="three">3</li>
+            </ul>
+            <ul class="app-text">
+              <li class="first-text">
+                Choose the subscription plan that best fits your needs and sign
+                up today.
+              </li>
+              <li class="second-text">
+                Order your delicious meal using our mobile app or website. Or
+                you can even call us!
+              </li>
+              <li class="thrid-text">
+                Enjoy your meal after less than 20 minutes. See you the next
+                time!
+              </li>
+            </ul>
+          </div>
+        </div>
+        <ul class="app-store">
+          <li>
+            <a href="#"
+              ><img
+                class="google-play"
+                src="./img/download-app-android.png"
+                alt="app store"
+            /></a>
+          </li>
+          <li class="apple-store">
+            <a href="#"
+              ><img class="apple" src="./img/download-app.svg" alt="play store"
+            /></a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- CITIES SECTION -->
+    <section class="city">
+      <div class="city-container">
+        <h2 class="city-head">we're currently in these cities</h2>
+
+        <div class="app-line"></div>
+        <div class="city-content">
+          <div class="content-1">
+            <div class="city-image">
+              <img class="img-city" src="./img/lisbon-3.jpg" alt="lisbon" />
+            </div>
+            <div class="city-text">
+              <h2 class="city-name">lisbon</h2>
+              <ul class="contact">
+                <li><i class="fa-solid fa-user-plus"></i>1600+happy eaters</li>
+                <li><i class="fa-solid fa-star"></i>60+top chefs</li>
+                <li>
+                  <i class="fa-brands fa-twitter"></i
+                  ><a class="mail" href="#">@omnifood-lx</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="content-2">
+            <div class="city-image">
+              <img
+                class="img-city"
+                src="./img/san-francisco.jpg"
+                alt="san-francisco"
+              />
+            </div>
+            <div class="city-text">
+              <h2 class="city-name">san-francisco</h2>
+              <ul class="contact">
+                <li><i class="fa-solid fa-user-plus"></i>3700+happy eaters</li>
+                <li><i class="fa-solid fa-star"></i>160+top chefs</li>
+                <li>
+                  <i class="fa-brands fa-twitter"></i
+                  ><a class="mail" href="#">@omnifood-lx</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="content-3">
+            <div class="city-image">
+              <img class="img-city" src="./img/berlin.jpg" alt="berlin" />
+            </div>
+            <div class="city-text">
+              <h2 class="city-name">berlin</h2>
+              <ul class="contact">
+                <li><i class="fa-solid fa-user-plus"></i>2300+happy eaters</li>
+                <li><i class="fa-solid fa-star"></i>110+top chefs</li>
+                <li>
+                  <i class="fa-brands fa-twitter"></i
+                  ><a class="mail" href="#">@omnifood-lx</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="content-4">
+            <div class="city-image">
+              <img class="img-city" src="./img/london.jpg" alt="london" />
+            </div>
+            <div class="city-text">
+              <h2 class="city-name">london</h2>
+              <ul class="contact">
+                <li><i class="fa-solid fa-user-plus"></i>1200+happy eaters</li>
+                <li><i class="fa-solid fa-star"></i>50+top chefs</li>
+                <li>
+                  <i class="fa-brands fa-twitter"></i
+                  ><a class="mail" href="#">@omnifood-lx</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- CUSTOMERS SECTION -->
+    <section class="customer">
+      <div class="customer-container">
+        <h2 class="customer-head">our customer cant't live without us</h2>
+        <div class="app-line"></div>
+        <div class="customer-comment">
+          <div class="customer-1">
+            <h2 class="customer-1-head">"</h2>
+            <p class="customer-text">
+              Omnifood is just awesome! I just launched a startup which leaves
+              me with no time for cooking, so Omnifood is a life-saver. Now that
+              I got used to it, I couldn't live without my daily meals!
+            </p>
+            <div class="profile">
+              <p class="profile-img">
+                <img class="man" src="./img/customer-1.jpg" alt="man" /><span
+                  class="profile-name"
+                  >Alberto Duncan</span
+                >
+              </p>
+            </div>
+          <div class="customer-2">
+            <h2 class="customer-1-head">"</h2>
+            <p class="customer-text">
+              Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
+            </p>
+            <div class="profile">
+              <p class="profile-img">
+                <img class="man" src="./img/customer-2.jpg" alt="girl" /><span
+                  class="profile-name"
+                  >Joana Silva</span
+                >
+              </p>
+            </div>
+          <div class="customer-1">
+            <h2 class="customer-1-head">"</h2>
+            <p class="customer-text">
+              I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
+            </p>
+            <div class="profile">
+              <p class="profile-img">
+                <img class="man" src="./img/customer-3.jpg" alt="boy" /><span
+                  class="profile-name"
+                  >Mitan Chapman</span
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
