--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <img src="./img/logo-white.png" alt="omnifood-logo" />
           </h2>
           <ul class="navigation">
-            <li><a href="#">Food delivery</a></li>
-            <li><a href="#">How it works</a></li>
-            <li><a href="#">Our cities</a></li>
-            <li><a href="#">sign up</a></li>
+            <li class="nav-list"><a class="food" href="#">Food delivery</a></li>
+            <li class="nav-list"><a class="food" href="#">How it works</a></li>
+            <li class="nav-list"><a class="food" href="#">Our cities</a></li>
+            <li class="nav-list"><a class="food" href="#">sign up</a></li>
           </ul>
         </nav>
         <h1 class="hero-text">
@@ -246,41 +246,208 @@
             </p>
             <div class="profile">
               <p class="profile-img">
-                <img class="man" src="./img/customer-1.jpg" alt="man" /><span
-                  class="profile-name"
-                  >Alberto Duncan</span
-                >
+                <img class="man" src="./img/customer-1.jpg" alt="man" />
               </p>
+              <span class="profile-name">Alberto Duncan</span>
             </div>
+          </div>
+
           <div class="customer-2">
             <h2 class="customer-1-head">"</h2>
             <p class="customer-text">
-              Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
+              Inexpensive, healthy and great-tasting meals, delivered right to
+              my home. We have lots of food delivery here in Lisbon, but no one
+              comes even close to Omifood. Me and my family are so in love!
             </p>
             <div class="profile">
               <p class="profile-img">
-                <img class="man" src="./img/customer-2.jpg" alt="girl" /><span
-                  class="profile-name"
-                  >Joana Silva</span
-                >
+                <img class="man" src="./img/customer-2.jpg" alt="girl" />
               </p>
+              <span class="profile-name">Joana Silva</span>
             </div>
-          <div class="customer-1">
+          </div>
+          <div class="customer-3">
             <h2 class="customer-1-head">"</h2>
             <p class="customer-text">
-              I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
+              I was looking for a quick and easy food delivery service in San
+              Franciso. I tried a lot of them and ended up with Omnifood. Best
+              food delivery service in the Bay Area. Keep up the great work!
             </p>
             <div class="profile">
               <p class="profile-img">
-                <img class="man" src="./img/customer-3.jpg" alt="boy" /><span
-                  class="profile-name"
-                  >Mitan Chapman</span
-                >
+                <img class="man" src="./img/customer-3.jpg" alt="boy" />
               </p>
+              <span class="profile-name">Mitan Chapman</span>
             </div>
           </div>
         </div>
       </div>
     </section>
+    <!-- SIGN-UP SESSION -->
+    <section class="sign-up">
+      <div class="sign-up-container">
+        <h2 class="sign-up-head">start eating healthy today</h2>
+        <div class="app-line"></div>
+        <div class="sign-up-content">
+          <div class="sign-up-content-1">
+            <h3 class="sign-up-content-head">premium</h3>
+            <div class="content-price">
+              <span class="price">$399</span>
+              <span class="price-month">/month</span>
+            </div>
+            <p class="content-text">That's only 13.30$ per meal</p>
+            <hr class="top" />
+            <ul class="info">
+              <li class="info-iteam">
+                <span class="tick">✓</span>1 meal every day
+              </li>
+              <li class="info-iteam"><span class="tick">✓</span>Order 24/7</li>
+              <li class="info-iteam">
+                <span class="tick">✓</span>Access to newest creations
+              </li>
+              <li class="info-iteam">
+                <span class="tick">✓</span>Free delivery
+              </li>
+            </ul>
+            <hr class="down" />
+            <button class="sign-now">Sign up now</button>
+          </div>
+          <div class="sign-up-content-2">
+            <h3 class="sign-up-content-head">pro</h3>
+            <div class="content-price">
+              <span class="price">$149</span>
+              <span class="price-month">/month</span>
+            </div>
+            <p class="content-text">That's only 14.90$ per meal</p>
+            <hr class="top" />
+            <ul class="info">
+              <li class="info-iteam">
+                <span class="tick">✓</span>1 meal 10 days/month
+              </li>
+              <li class="info-iteam"><span class="tick">✓</span>Order 24/7</li>
+              <li class="info-iteam">
+                <span class="tick">✓</span>Access to newest creations
+              </li>
+              <li class="info-iteam">
+                <span class="tick">✓</span>Free delivery
+              </li>
+            </ul>
+            <hr class="down" />
+            <button class="sign-in">Sign up now</button>
+          </div>
+          <div class="sign-up-content-3">
+            <h3 class="sign-up-content-head">starter</h3>
+            <div class="content-price">
+              <span class="price">$19</span>
+              <span class="price-month">/meal</span>
+            </div>
+            <br />
+            <hr class="top" />
+            <ul class="info">
+              <li class="info-iteam"><span class="tick">✓</span>1 meal</li>
+              <li class="info-iteam">
+                <span class="tick">✓</span>Order from 8 am to 12 pm
+              </li>
+              <li class="info-iteam"><span class="tick">✕</span></li>
+              <li class="info-iteam">
+                <span class="tick">✓</span>Free delivery
+              </li>
+            </ul>
+            <hr class="down" />
+            <button class="sign-in">Sign up now</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--CONTACT-US SESSION -->
+    <form class="contact-us">
+      <div class="contact-us-container">
+        <h2 class="contact-us-head">we're happy to hear from you</h2>
+        <div class="app-line"></div>
+        <div class="list-container">
+          <ul class="form-list">
+            <li class="label-list">
+              <div><label for="Name">Name</label></div>
+              <div class="input-list">
+                <input type="text" id="Name" placeholder="Your name" />
+              </div>
+            </li>
+
+            <li class="label-list">
+              <div><label for="Email">Email</label></div>
+              <div class="input-list">
+                <input type="text" id="Email" placeholder="Your email" />
+              </div>
+            </li>
+
+            <li class="label-list label-list-3">
+              <div><label for="text">How did you find us?</label></div>
+              <div class="input-list">
+                <select type="text" id="text" placeholder="Friends">
+                  <option value="Friends">Friends</option>
+                  <option value="search engine">Search engine</option>
+                  <option value="Advertisment">Advertisment</option>
+                  <option value="other">Other</option>
+                </select>
+              </div>
+            </li>
+
+            <li class="label-list other-list">
+              <div><label for="text">Newsletter?</label></div>
+              <div class="input-list">
+                <span
+                  ><input class="checkbox" type="checkbox" /><span
+                    >Yes,please</span
+                  ></span
+                >
+              </div>
+            </li>
+
+            <li class="label-list other-list">
+              <div><label for="text">Drop us a line</label></div>
+              <div class="input-list">
+                <textarea name="#" id="text" cols="20" rows="10"></textarea>
+              </div>
+            </li>
+            <li class="submit"><input type="submit" value="Submit" /></li>
+          </ul>
+        </div>
+      </div>
+    </form>
+    <!-- FOOTER SESSION -->
+    <footer class="footer-session">
+      <div class="footer-container">
+        <nav class="footer-nav">
+          <ul class="footer-nav-list">
+            <li class="footer-iteam"><a class="tools" href="#">About Us</a></li>
+            <li class="footer-iteam"><a class="tools" href="#">Blog</a></li>
+            <li class="footer-iteam"><a class="tools" href="#">Press</a></li>
+            <li class="footer-iteam"><a class="tools" href="#">iOS App</a></li>
+            <li class="footer-iteam">
+              <a class="tools" href="#">Android App</a>
+            </li>
+          </ul>
+          <ul class="footer-list">
+            <li class="footer-item-2"><i class="fa-brands fa-facebook"></i></li>
+            <li class="footer-item-2"><i class="fa-brands fa-twitter"></i></li>
+            <li class="footer-item-2">
+              <i class="fa-brands fa-google-plus-g"></i>
+            </li>
+            <li class="footer-item-2">
+              <i class="fa-brands fa-square-instagram"></i>
+            </li>
+          </ul>
+        </nav>
+        <p class="footer-text">
+          This webpage was created for the course "Design and Develop a Killer
+          Website Using HTML5 and CSS3" by Jonas Schmedtmann. No <br />
+          copyrights here. <br />
+          This webpage is for you! So go and do whatever you want with it and
+          have fun. <br /><br />
+
+          Build with ❤️ in the beautiful city of Lisbon, Portugal, March 2015.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
