--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <section class="hero-section">
       <header>
         <nav>
+          <div class="harmbuger"><i class="fa-solid fa-bars"></i></div>
           <h2 class="logo">
             <img src="./img/logo-white.png" alt="omnifood-logo" />
           </h2>
@@ -53,10 +54,12 @@
         <div class="container-1">
           <div><i class="fa-solid fa-infinity"></i></div>
           <h3 class="icon-head">up to 365 days/year</h3>
-          <p class="icon-para"></p>
-          Never cook again! We really mean that. Our subscription plans include
-          up to 365 days/year coverage. You can also choose to order more
-          flexibly if that's your style.
+          <p class="icon-para">
+            Never cook again! We really mean that. Our subscription plans
+            include up to 365 days/year coverage. You can also choose to order
+            more flexibly if that's your style
+          </p>
+          .
         </div>
         <div class="container-2">
           <div><i class="fa-regular fa-clock"></i></div>
@@ -406,10 +409,10 @@
             <li class="label-list other-list">
               <div><label for="text">Drop us a line</label></div>
               <div class="input-list">
-                <textarea name="#" id="text" cols="20" rows="10"></textarea>
+                <textarea name="#" id="text" placeholder="Message"></textarea>
               </div>
             </li>
-            <li class="submit"><input type="submit" value="Submit" /></li>
+            <li class="submit"><input type="submit" value="Send it!" /></li>
           </ul>
         </div>
       </div>
